Update portfolio title and button links 2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kathy - QA Engineer Portfolio</title>
+    <title>Kathy Davis - QA Manual Tester Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -41,6 +41,7 @@
         .btn-primary {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             transition: all 0.3s ease;
+            cursor: pointer;
         }
         
         .btn-primary:hover {
@@ -103,7 +104,6 @@
             <p class="text-lg mb-8 max-w-2xl mx-auto section-fade">
                 Passionate about ensuring software quality through meticulous testing and continuous improvement
             </p>
-
         </div>
     </section>
 
@@ -211,101 +211,6 @@
         </div>
     </section>
 
-    <!-- Technologies Section -->
-    <section class="py-20 bg-white">
-        <div class="max-w-6xl mx-auto px-4">
-            <h2 class="text-4xl font-bold text-center mb-16 text-gray-800">Technologies and Tools</h2>
-            
-            <!-- Bug Tracking & Test Management -->
-            <div class="mb-12 section-fade">
-                <h3 class="text-2xl font-semibold mb-6 text-purple-600">Bug Tracking & Test Management</h3>
-                <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
-                    <div class="bg-gray-50 p-6 rounded-xl text-center tech-icon">
-                        <div class="w-12 h-12 bg-blue-100 rounded-lg mx-auto mb-3 flex items-center justify-center">
-                            <span class="text-blue-600 font-bold text-lg">J</span>
-                        </div>
-                        <span class="text-gray-700 font-medium">Jira</span>
-                    </div>
-                    <div class="bg-gray-50 p-6 rounded-xl text-center tech-icon">
-                        <div class="w-12 h-12 bg-green-100 rounded-lg mx-auto mb-3 flex items-center justify-center">
-                            <span class="text-green-600 font-bold text-lg">TR</span>
-                        </div>
-                        <span class="text-gray-700 font-medium">TestRail</span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- API & Development Tools -->
-            <div class="mb-12 section-fade">
-                <h3 class="text-2xl font-semibold mb-6 text-purple-600">API & Development Tools</h3>
-                <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
-                    <div class="bg-gray-50 p-6 rounded-xl text-center tech-icon">
-                        <div class="w-12 h-12 bg-orange-100 rounded-lg mx-auto mb-3 flex items-center justify-center">
-                            <span class="text-orange-600 font-bold text-lg">P</span>
-                        </div>
-                        <span class="text-gray-700 font-medium">Postman</span>
-                    </div>
-                    <div class="bg-gray-50 p-6 rounded-xl text-center tech-icon">
-                        <div class="w-12 h-12 bg-red-100 rounded-lg mx-auto mb-3 flex items-center justify-center">
-                            <span class="text-red-600 font-bold text-lg">C</span>
-                        </div>
-                        <span class="text-gray-700 font-medium">Chrome DevTools</span>
-                    </div>
-                    <div class="bg-gray-50 p-6 rounded-xl text-center tech-icon">
-                        <div class="w-12 h-12 bg-green-100 rounded-lg mx-auto mb-3 flex items-center justify-center">
-                            <span class="text-green-600 font-bold text-lg">AS</span>
-                        </div>
-                        <span class="text-gray-700 font-medium">Android Studio</span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Database -->
-            <div class="mb-12 section-fade">
-                <h3 class="text-2xl font-semibold mb-6 text-purple-600">Database</h3>
-                <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
-                    <div class="bg-gray-50 p-6 rounded-xl text-center tech-icon">
-                        <div class="w-12 h-12 bg-blue-100 rounded-lg mx-auto mb-3 flex items-center justify-center">
-                            <span class="text-blue-600 font-bold text-lg">SQL</span>
-                        </div>
-                        <span class="text-gray-700 font-medium">SQL</span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Testing Types -->
-            <div class="section-fade">
-                <h3 class="text-2xl font-semibold mb-6 text-purple-600">Testing Types</h3>
-                <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
-                    <div class="bg-gray-50 p-6 rounded-xl text-center tech-icon">
-                        <div class="w-12 h-12 bg-purple-100 rounded-lg mx-auto mb-3 flex items-center justify-center">
-                            <span class="text-purple-600 font-bold text-sm">GUI</span>
-                        </div>
-                        <span class="text-gray-700 font-medium">GUI Testing</span>
-                    </div>
-                    <div class="bg-gray-50 p-6 rounded-xl text-center tech-icon">
-                        <div class="w-12 h-12 bg-yellow-100 rounded-lg mx-auto mb-3 flex items-center justify-center">
-                            <span class="text-yellow-600 font-bold text-sm">SM</span>
-                        </div>
-                        <span class="text-gray-700 font-medium">Smoke Testing</span>
-                    </div>
-                    <div class="bg-gray-50 p-6 rounded-xl text-center tech-icon">
-                        <div class="w-12 h-12 bg-teal-100 rounded-lg mx-auto mb-3 flex items-center justify-center">
-                            <span class="text-teal-600 font-bold text-sm">SN</span>
-                        </div>
-                        <span class="text-gray-700 font-medium">Sanity Testing</span>
-                    </div>
-                    <div class="bg-gray-50 p-6 rounded-xl text-center tech-icon">
-                        <div class="w-12 h-12 bg-indigo-100 rounded-lg mx-auto mb-3 flex items-center justify-center">
-                            <span class="text-indigo-600 font-bold text-sm">REG</span>
-                        </div>
-                        <span class="text-gray-700 font-medium">Regression Testing</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Portfolio Section -->
     <section id="portfolio" class="py-20 bg-gray-50">
         <div class="max-w-6xl mx-auto px-4">
@@ -323,8 +228,7 @@
                     </div>
                     <div class="p-6">
                         <p class="text-gray-600 mb-6">Comprehensive testing of a coffee and food ordering web application featuring product catalog browsing, online ordering with delivery services, and table reservation functionality. Validated complete customer workflows from menu exploration and product details to order placement and advance booking systems. Ensured seamless integration between e-commerce features and restaurant reservation management.</p>
-                        <button class="btn-primary text-white px-6 py-2 rounded-lg w-full font-semibold">
-                              data-link="https://kathy-davis.github.io/portfolio/coffee-cafe-app-testing">
+                        <button class="btn-primary text-white px-6 py-2 rounded-lg w-full font-semibold" onclick="window.open('https://github.com/Kathy-Davis/coffee-cafe-app-testing', '_blank')">
                             Explore My Process
                         </button>
                     </div>
@@ -344,7 +248,7 @@
                     </div>
                     <div class="p-6">
                         <p class="text-gray-600 mb-6">Comprehensive testing of a professional real estate platform that provides agents with international off-plan project data, payment plans, and marketing materials. Validated functionality for generating instant sales offers as links or PDFs, managing resale deals between agents, and building verified partner networks. Ensured seamless user experience across property search, registration, and booking workflows.</p>
-                        <button class="btn-primary text-white px-6 py-2 rounded-lg w-full font-semibold">
+                        <button class="btn-primary text-white px-6 py-2 rounded-lg w-full font-semibold" onclick="window.open('https://github.com/Kathy-Davis/global-real-estate-app-testing', '_blank')">
                             Review Test Execution
                         </button>
                     </div>
@@ -364,7 +268,7 @@
                     </div>
                     <div class="p-6">
                         <p class="text-gray-600 mb-6">Extensive testing of a mobile legal platform enabling individuals and small businesses to create, sign, and manage contracts without traditional legal services. Validated template selection workflows, digital signature processes, and secure document storage on mobile devices. Tested multi-party signing capabilities, contract status tracking, and affordable legal document creation for various business and personal scenarios.</p>
-                        <button class="btn-primary text-white px-6 py-2 rounded-lg w-full font-semibold">
+                        <button class="btn-primary text-white px-6 py-2 rounded-lg w-full font-semibold" onclick="window.open('https://github.com/Kathy-Davis/contract-management-app-testing', '_blank')">
                             See Testing Details
                         </button>
                     </div>
@@ -384,7 +288,7 @@
                     </div>
                     <div class="p-6">
                         <p class="text-gray-600 mb-6">Cross-environment testing of a healthcare provider mobile application using Android Debug Bridge (ADB) simulator across four different environments. Focused on validating user authentication workflows to ensure consistent login functionality across various system configurations. Conducted systematic testing of login processes in simulated environments to verify platform reliability and user access across different deployment scenarios.</p>
-                        <button class="btn-primary text-white px-6 py-2 rounded-lg w-full font-semibold">
+                        <button class="btn-primary text-white px-6 py-2 rounded-lg w-full font-semibold" onclick="window.open('https://github.com/Kathy-Davis/task-management-app-testing', '_blank')">
                             View Test Analysis
                         </button>
                     </div>
@@ -404,7 +308,7 @@
                     </div>
                     <div class="p-6">
                         <p class="text-gray-600 mb-6">Database testing and SQL query validation for data integrity and performance optimization.</p>
-                        <button class="btn-primary text-white px-6 py-2 rounded-lg w-full font-semibold">
+                        <button class="btn-primary text-white px-6 py-2 rounded-lg w-full font-semibold" onclick="window.open('https://github.com/Kathy-Davis/sql-portfolio-analysis', '_blank')">
                             View SQL Validation
                         </button>
                     </div>
@@ -424,8 +328,8 @@
                     </div>
                     <div class="p-6">
                         <p class="text-gray-600 mb-6">Comprehensive bug documentation and tracking examples from various testing projects.</p>
-                        <button class="btn-primary text-white px-6 py-2 rounded-lg w-full font-semibold">
-                            QA Methodology
+                        <button class="btn-primary text-white px-6 py-2 rounded-lg w-full font-semibold" onclick="window.open('https://github.com/Kathy-Davis/portfolio#bug-reporting--quality-assurance', '_blank')">
+                            View Bug Reports
                         </button>
                     </div>
                 </div>
@@ -517,13 +421,13 @@
                             </div>
                             <span class="text-gray-700">St. Louis, MO</span>
                         </div>
-                        <a href="https://kathydavis.github.io" target="_blank" rel="noopener noreferrer" class="flex items-center hover:bg-gray-50 p-3 rounded-lg transition-colors">
+                        <a href="https://github.com/Kathy-Davis" target="_blank" rel="noopener noreferrer" class="flex items-center hover:bg-gray-50 p-3 rounded-lg transition-colors">
                             <div class="w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center mr-4">
                                 <svg class="w-6 h-6 text-gray-600" fill="currentColor" viewBox="0 0 24 24">
                                     <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.30.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                                 </svg>
                             </div>
-                            <span class="text-gray-700 hover:text-gray-600 transition-colors">kathydavis.github.io</span>
+                            <span class="text-gray-700 hover:text-gray-600 transition-colors">github.com/Kathy-Davis</span>
                         </a>
                     </div>
                 </div>
@@ -604,18 +508,6 @@
             observer.observe(section);
         });
 
-     // Portfolio button interactions
-        <script>
-document.querySelectorAll('.btn-primary').forEach(button => {
-  button.addEventListener('click', e => {
-    e.preventDefault();
-    const link = button.getAttribute('data-link');
-    if (link) {
-      window.open(link, '_blank');
-    }
-  });
-});
-</script>
         // Contact form handling
         document.getElementById('contactForm').addEventListener('submit', function(e) {
             e.preventDefault();
@@ -634,12 +526,5 @@ document.querySelectorAll('.btn-primary').forEach(button => {
             this.reset();
         });
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'989a6c4bc33f1122',t:'MTc1OTY0MTEzNi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script> <script>
-console.log("=== DEBUG ===");
-console.log("Script loaded!");
-// Test button selection
-const buttons = document.querySelectorAll('.btn-primary');
-console.log("Buttons found:", buttons.length);
-buttons.forEach(btn => console.log("Button:", btn.textContent));
-</script> </body>
+</body>
 </html>
