--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
             0%, 50% { border-color: transparent; }
             51%, 100% { border-color: #667eea; }
         }
-    </style>
+    </style> 
+       <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="bg-gray-50 font-sans">
     <!-- Navigation -->
