Enhance Coffee Cafe App section with buttons
Added buttons for viewing case study and code on GitHub for the Coffee Cafe App.

--- a/index.html
+++ b/index.html
@@ -238,23 +238,35 @@
         <div class="max-w-6xl mx-auto px-4">
             <h2 class="text-4xl font-bold text-center mb-16 text-gray-800">Case Portfolio</h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Coffee Cafe App -->
-                <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover section-fade">
-                    <div class="gradient-bg h-48 flex items-center justify-center">
-                        <div class="text-white text-center">
-                            <div class="w-16 h-16 bg-white bg-opacity-20 rounded-full mx-auto mb-4 flex items-center justify-center">
-                                <div class="text-white font-bold text-2xl">CC</div>
-                            </div>
-                            <h3 class="text-xl font-semibold">Coffee Cafe App</h3>
-                        </div>
-                    </div>
-                    <div class="p-6">
-                        <p class="text-gray-600 mb-6">Comprehensive testing of a coffee and food ordering web application featuring product catalog browsing, online ordering with delivery services, and table reservation functionality. Validated complete customer workflows from menu exploration and product details to order placement and advance booking systems. Ensured seamless integration between e-commerce features and restaurant reservation management.</p>
-                        <button class="btn-primary text-white px-6 py-2 rounded-lg w-full font-semibold" onclick="window.open('https://github.com/Kathy-Davis/coffee-cafe-app-testing', '_blank')">
-                            Explore My Process
-                        </button>
-                    </div>
-                </div>
+html
+<!-- Coffee Cafe App -->
+<div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover section-fade">
+    <div class="gradient-bg h-48 flex items-center justify-center">
+        <div class="text-white text-center">
+            <div class="w-16 h-16 bg-white bg-opacity-20 rounded-full mx-auto mb-4 flex items-center justify-center">
+                <div class="text-white font-bold text-2xl">CC</div>
+            </div>
+            <h3 class="text-xl font-semibold">Coffee Cafe App</h3>
+        </div>
+    </div>
+    <div class="p-6">
+        <p class="text-gray-600 mb-6">Comprehensive testing of a coffee and food ordering web application featuring product catalog browsing, online ordering with delivery services, and table reservation functionality. Validated complete customer workflows from menu exploration and product details to order placement and advance booking systems. Ensured seamless integration between e-commerce features and restaurant reservation management.</p>
+        
+        <!-- Two-button layout -->
+        <div class="flex flex-col sm:flex-row gap-3">
+            <a href="coffee-cafe.html" 
+               class="flex-1 btn-primary text-white px-4 py-2.5 rounded-lg font-semibold text-center transition-all hover:shadow-lg hover:-translate-y-0.5">
+                View Case Study
+            </a>
+            <a href="https://github.com/Kathy-Davis/coffee-cafe-app-testing" 
+               target="_blank"
+               class="flex-1 bg-gray-700 text-white px-4 py-2.5 rounded-lg font-semibold text-center hover:bg-gray-800 transition-all hover:shadow-lg hover:-translate-y-0.5">
+                View Code on GitHub
+            </a>
+        </div>
+    </div>
+</div>
+             </div>
 
                 <!-- Global Real Estate App -->
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden card-hover section-fade">
